Cleaning up warnings in code